--- a/css/style.css
+++ b/css/style.css
@@ -304,9 +304,9 @@ small{
     margin-right: .5rem;
 }
 
-.fa-facebook {
+.fa-github {
     font-size: 2em;
-    color: #3b5998;
+    color: black;
 }
 
 .fa-instagram {
